--- a/lib/premiere_ecoute_web/components/layouts/root.html.heex
+++ b/lib/premiere_ecoute_web/components/layouts/root.html.heex
@@ -7,6 +7,7 @@
     <.live_title default="PremiereEcoute" suffix=" · Phoenix Framework">
       {assigns[:page_title]}
     </.live_title>
+    <link phx-track-static rel="stylesheet" href={~p"/fonts/BricolageGrotesque/bricolage-grotesque.css"} />
     <link phx-track-static rel="stylesheet" href={~p"/assets/css/app.css"} />
     <script defer phx-track-static type="text/javascript" src={~p"/assets/js/app.js"}>
     </script>
