--- a/lib/premiere_ecoute_web/live/accounts/account_live.html.heex
+++ b/lib/premiere_ecoute_web/live/accounts/account_live.html.heex
@@ -72,6 +72,7 @@
                             :admin -> "bg-purple-100 text-purple-800"
                             :streamer -> "bg-blue-100 text-blue-800"
                             :viewer -> "bg-gray-100 text-gray-800"
+                            :bot -> "bg-red-100 text-red-800"
                           end
                         ]}>
                           {String.capitalize(to_string(@current_user.role))}
