--- a/lib/premiere_ecoute_web/controllers/static/legal/html/privacy.html.heex
+++ b/lib/premiere_ecoute_web/controllers/static/legal/html/privacy.html.heex
@@ -158,8 +158,7 @@
   <p>Nous traitons vos données personnelles sur les bases juridiques suivantes :</p>
   <ul>
     <li>
-      <strong>Consentement</strong>
-      : pour l'utilisation de cookies non-essentiels et l'envoi de communications marketing
+      <strong>Consentement</strong> : pour l'utilisation de cookies non-essentiels et l'envoi de communications marketing
     </li>
     <li><strong>Exécution du contrat</strong> : pour fournir nos services de streaming musical collaboratif</li>
     <li><strong>Intérêt légitime</strong> : pour l'amélioration de nos services et la sécurité de la plateforme</li>
