--- a/lib/premiere_ecoute_web/live/accounts/account_live.html.heex
+++ b/lib/premiere_ecoute_web/live/accounts/account_live.html.heex
@@ -31,11 +31,7 @@
                 <div class="flex items-center space-x-3 mb-3">
                   <div class="w-10 h-10 bg-gray-600 rounded-full flex items-center justify-center">
                     <svg class="w-5 h-5 text-white" fill="currentColor" viewBox="0 0 20 20">
-                      <path
-                        fill-rule="evenodd"
-                        d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z"
-                        clip-rule="evenodd"
-                      />
+                      <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd" />
                     </svg>
                   </div>
                   <div>
@@ -174,10 +170,7 @@
                   </svg>
                 </div>
                 <p class="text-gray-400 text-sm">{gettext("Not connected")}</p>
-                <button
-                  phx-click="connect_twitch"
-                  class="mt-2 text-purple-400 hover:text-purple-300 text-sm font-medium"
-                >
+                <button phx-click="connect_twitch" class="mt-2 text-purple-400 hover:text-purple-300 text-sm font-medium">
                   {gettext("Connect Twitch")}
                 </button>
               </div>
