--- a/lib/premiere_ecoute_web/live/admin/admin_albums_live.html.heex
+++ b/lib/premiere_ecoute_web/live/admin/admin_albums_live.html.heex
@@ -167,11 +167,7 @@
       <div class="flex items-center justify-between p-6 border-b border-gray-700">
         <div class="flex items-center">
           <%= if @selected_album.cover_url do %>
-            <img
-              class="h-16 w-16 rounded-lg object-cover mr-4"
-              src={@selected_album.cover_url}
-              alt={@selected_album.name}
-            />
+            <img class="h-16 w-16 rounded-lg object-cover mr-4" src={@selected_album.cover_url} alt={@selected_album.name} />
           <% else %>
             <div class="h-16 w-16 rounded-lg bg-gray-600 flex items-center justify-center mr-4">
               <svg class="w-8 h-8 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
